<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/editor_common_margin"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_item" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_view"
        android:hint="@string/hint_name" />

    <LinearLayout
        android:id="@+id/price_quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit_text"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/price_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/price_up_down_layout"
                    android:hint="@string/hint_price"
                    android:inputType="number" />

                <LinearLayout
                    android:id="@+id/price_up_down_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <Button
                        android:id="@+id/price_down_button"
                        style="@style/plus_minus_button"
                        android:text="@string/minus" />

                    <Button
                        android:id="@+id/price_up_button"
                        style="@style/plus_minus_button"
                        android:text="@string/plus" />
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/quantity_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/quantity_up_down_layout"
                    android:hint="@string/hint_quantity"
                    android:inputType="number" />

                <LinearLayout
                    android:id="@+id/quantity_up_down_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <Button
                        android:id="@+id/quantity_down_button"
                        style="@style/plus_minus_button"
                        android:text="@string/minus" />

                    <Button
                        android:id="@+id/quantity_up_button"
                        style="@style/plus_minus_button"
                        android:text="@string/plus" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/supplier_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_quantity_layout"
        android:text="@string/supplier_name" />

    <EditText
        android:id="@+id/supplier_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_name_text_view"
        android:hint="@string/hint_supplier_name" />

    <TextView
        android:id="@+id/supplier_phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_name_edit_text"
        android:text="@string/supplier_phone" />

    <EditText
        android:id="@+id/supplier_phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_phone_text_view"
        android:inputType="phone" />

    <Button
        android:id="@+id/contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="Contact the Supplier"
        android:textColor="@color/plus_minus_button" />
</RelativeLayout>